Был создан пользовательский интерфейс разделов, добавлены черновые варианты запросов к базе данных. Добавлен черновой вариант вывода базы данных в виде таблицы. Добавлены request для страниц, соответствующие записи в urls.

--- a/NIR_UD/templates/NIR_UD/students_tables.html
+++ b/NIR_UD/templates/NIR_UD/students_tables.html
@@ -2,10 +2,33 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Ученик</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
+    <title>Администрируемый раздел</title>
+    <link href="../../../src/static/css/admin_tables.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;600&family=Roboto:wght@300&display=swap" rel="stylesheet">
+    <base target="_self">
 </head>
 <body>
-<h1>Ученик</h1>
+
+    <div class="parent">
+        <div class="head">
+        <h1>Ученический раздел</h1>
+        </div>
+        <hr>
+    <div class="container">
+
+    <a href="AcademicPerfomance.html"><button class="button">Журнал успеваемости</button></a>
+        <a href="Homework.html"><button class="button">Журнал домашних заданий</button></a>
+        <a href="Timetable.html"><button class="button">Расписание учебных занятий</button></a>
+        <a href="AverageScore.html"><button class="button">Журнал средних баллов</button></a>
+    </div>
+        <div class="row3">
+             <form action="/" target="_self">
+        <button class="back">Выйти</button>
+             </form>
+        </div>
+    </div>
+
 </body>
 </html>
