Добавлены кнопки "опции" в строки таблиц.

--- a/NIR_UD/templates/NIR_UD/AcademicPerfomance.html
+++ b/NIR_UD/templates/NIR_UD/AcademicPerfomance.html
@@ -25,6 +25,7 @@
             <th>Ученик</th>
             <th>Учебный предмет</th>
             <th>Класс</th>
+            <th><img src="../../../src/static/img/More.svg" alt=""></th>
         </tr>
         </thead>
         <tbody>
@@ -37,6 +38,7 @@
             <td>{{ el.student_id_id }}</td>
             <td>{{ el.subject_id_id }}</td>
             <td>{{ el.class_id_id }}</td>
+            <td><img src="../../../src/static/img/More.svg" alt=""></td>
         </tr>
         {%  endfor %}
         </tbody>
