--- a/NIR_UD/templates/NIR_UD/AcademicPerfomance.html
+++ b/NIR_UD/templates/NIR_UD/AcademicPerfomance.html
@@ -18,7 +18,6 @@
         <table id="mytable">
             <thead>
             <tr>
-                <th><input name="radio-value" type="radio" id="radioButton"></th>
                 <th>Дата урока</th>
                 <th>Присутствие</th>
                 <th>Оценка за урок</th>
@@ -30,26 +29,26 @@
             </thead>
             <tbody>
             {% for el in marks %}
-                <tr class="success">
-                    <td><input name="radio-value" type="radio" id="radioButton"></td>
-                    <td>{{ el.lesson_date }}</td>
-                    <td>{{ el.is_appeared }}</td>
-                    <td>
-                        <button class="i">{{ el.student_mark }}</button>
-                    </td>
-                    <td>{{ el.student_id_id }}</td>
-                    <td>{{ el.subject_id_id }}</td>
-                    <td>{{ el.class_id_id }}</td>
-                    <td>
-                        <div class="dropdown"><img src="../../../src/static/img/More.svg" alt="">
-                            <div class="dropdown-content">
-                        <a href="#">aaa</a>
-                        <a href="#">bbb</a>
-                        <a href="#">ccc</a>
+                <form method="post">{% csrf_token %}
+                    <tr class="success">
+                        <td>{{ el.lesson_date }}</td>
+                        <td>{{ el.is_appeared }}</td>
+                        <td>
+                            <button class="i">{{ el.student_mark }}</button>
+                        </td>
+                        <td>{{ el.student_id_id }}</td>
+                        <td>{{ el.subject_id_id }}</td>
+                        <td>{{ el.class_id_id }}</td>
+                        <td>
+                            <div class="dropdown"><img src="../../../src/static/img/More.svg" alt="">
+                                <div class="dropdown-content">
+                                    <input type="submit" value="Изменить" formaction="some-to-edit">
+                                    <input type="submit" value="Удалить" formaction="some-to-delete">
+                                </div>
                             </div>
-                        </div>
-                    </td>
-                </tr>
+                        </td>
+                    </tr>
+                </form>
             {% endfor %}
             </tbody>
         </table>
