--- a/src/static/css/base.css
+++ b/src/static/css/base.css
@@ -1,6 +1,6 @@
 body {
     background-color: #F2F0F9;
-    font-family: 'Raleway', sans-serif;
+    font-family: 'Inter', sans-serif;
 }
 
 .row3 {
@@ -12,7 +12,7 @@ body {
 
 
 .row3 button {
-    font-family: 'Raleway', sans-serif;
+    font-family: 'Inter', sans-serif;
     width: 130px;
     height: 40px;
     -webkit-appearance: none;
@@ -23,12 +23,19 @@ body {
     cursor: pointer;
 }
 
-h2 {
-    font-family: 'Raleway', sans-serif;
-    color: #4A4A4A;
-    margin-top: 30px;
-    margin-bottom: 30px;
-    margin-left: 10px;
+.head {
+    margin-bottom: 20px;
+    margin-top: 50px;
+}
+
+.head p {
+    font-family: 'Inter', sans-serif;
+    color: #6E6893;
+    text-transform: uppercase;
+    letter-spacing: 0.05em;
+    font-size: 14px;
+    font-weight: 600;
+    margin: 0;
 }
 
 hr {
@@ -80,6 +87,7 @@ table {
     overflow: hidden;
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
     border-radius: 8px;
+    width: 1100px;
 }
 
 thead tr th{
@@ -96,15 +104,17 @@ th {
 
 th:first-child {
     color: #6E6893;
-    padding: 13px 65px 12px 20px;
+    padding: 13px 25px 12px 20px;
     letter-spacing: 0.05em;
     text-transform: uppercase;
+    width: 180px;
+    text-align: left;
 }
 
 th:nth-child(2) {
     color: #6E6893;
     width: 200px;
-    margin-right: 30px;
+    padding-right: 30px;
     letter-spacing: 0.05em;
     text-transform: uppercase;
     text-align: left;
@@ -112,8 +122,7 @@ th:nth-child(2) {
 
 th:nth-child(3) {
     color: #6E6893;
-    width: 150px;
-    margin-left: 30px;
+    width: 290px;
     letter-spacing: 0.05em;
     text-transform: uppercase;
     text-align: left;
@@ -131,6 +140,8 @@ th:nth-child(4) {
 th:nth-child(5) {
     color: #6E6893;
     letter-spacing: 0.05em;
+    width: 330px;
+    padding-left: 74px;
     text-transform: uppercase;
     text-align: left;
 }
@@ -138,7 +149,7 @@ th:nth-child(5) {
 th:nth-child(6) {
     color: #6E6893;
     width: 150px;
-    padding-left: 100px;
+    padding-left: 70px;
     letter-spacing: 0.05em;
     text-transform: uppercase;
     text-align: left;
@@ -146,9 +157,11 @@ th:nth-child(6) {
 
 th:nth-child(7) {
     color: #6E6893;
-    width: 150px;
-    padding-right:111px;
+    width: 30px;
+    padding-right:20px;
     padding-left:20px;
+    padding-top: 13px;
+    padding-bottom: 13px;
     letter-spacing: 0.05em;
     text-transform: uppercase;
     text-align: right;
@@ -163,7 +176,7 @@ th:nth-child(8) {
 .success td {
     margin-top:1px;
     font-size: 14px;
-    font-weight: 600;
+    font-weight: 500;
     background-color: white;
     color: #25213B;
     border-bottom: 1px solid #D9D5EC;
@@ -175,20 +188,24 @@ th:nth-child(8) {
 }
 
 .success td:nth-child(4){
+    width: 104px;
     padding-left: 104px;
-    width: 354px;
+}
+
+.success td:nth-child(5){
+    padding-left: 74px;
+    width: 250px;
 }
 
 .success td:nth-child(6){
-    padding-left: 100px;
     width: 150px;
+    padding-left: 80px;
 }
 
 .success td:nth-child(7){
-    text-align: right;
     width: 150px;
-    padding-right:111px;
-    padding-left:20px;
+    padding: 20px 20px 20px 20px;
+    text-align: right;
 }
 
 .dropdown-content {
