Добавлена функция возврата на предыдущую страницу в соответствии с правами доступа.

--- a/NIR_UD/templates/NIR_UD/AcademicPerfomance.html
+++ b/NIR_UD/templates/NIR_UD/AcademicPerfomance.html
@@ -12,7 +12,7 @@
 <div class="parent">
     <div class="container">
     <div class="back">
-        <a href=""><img src="../../../src/static/img/Vector.svg" alt="">Назад</a>
+        <a href="{% url 'back' %}"><img src="../../../src/static/img/Vector.svg" alt="">Назад</a>
     </div>
         <div class="head">
         <p>Успеваемость</p>
