--- a/src/static/css/base.css
+++ b/src/static/css/base.css
@@ -25,7 +25,17 @@ body {
     margin-top: 40px;
 }
 
-.head p {
+.error {
+    font-family: 'Inter', sans-serif;
+    color: #D30000;
+    text-transform: uppercase;
+    letter-spacing: 0.05em;
+    font-size: 14px;
+    font-weight: 600;
+    margin: 0;
+}
+
+.head_name {
     font-family: 'Inter', sans-serif;
     color: #6E6893;
     text-transform: uppercase;
@@ -87,6 +97,7 @@ body {
     padding: 10px;
     margin: 15px 0px 15px;
     border-radius: 6px;
+    cursor: pointer;
 }
 
 .head hr {
@@ -239,6 +250,7 @@ th:nth-child(8) {
     width: 150px;
     padding: 20px 20px 20px 20px;
     text-align: right;
+    cursor: pointer;
 }
 
 .footer-table {
@@ -250,6 +262,7 @@ th:nth-child(8) {
 .table {
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
     border-radius: 8px;
+    margin-bottom: 70px;
 }
 
 
@@ -550,6 +563,8 @@ th:nth-child(8) {
 	border-radius: 4px;
     color: #90959E;
 	user-select: none;
+    font-size:14px;
+    font-weight: 500;
 }
 
 .form_radio_btn input[type=radio]:checked + label {
